--- a/Resources.html
+++ b/Resources.html
@@ -27,7 +27,7 @@
                         <li><a href="index.html">HOME</a></li>
                         <li><a href="SpiralPage.html">THE SPIRAL</a></li>
                         <li><a href="BoutUs.html">ABOUT US</a></li>
-                        <li><a href="https://208weeksproject.wordpress.com">UPDATES</a></li>
+                       <li><a href="https://208weeksproject.wordpress.com">UPDATES/BLOG</a></li>
                     </ul>
                 </div>
                 <i class="fa-solid fa-bars" onclick="showMenu()"></i>
@@ -184,7 +184,7 @@
                         <li><a href="SpiralPage.html">THE SPIRAL</a></li>
                         <li><a href="Resources.html">RESOURCES</a></li>
                         <li><a href="BoutUs.html">ABOUT US</a></li>
-                        <li><a href="https://208weeksproject.wordpress.com">UPDATES</a></li>
+                      <li><a href="https://208weeksproject.wordpress.com">UPDATES/BLOG</a></li>
                     </ul>
 
                 </div>
