added link to spiral 2.pdf

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         Click the links below to download the spiral or visit our Spiral Page to learn more.
                     </p>
 
-                   <a href="spirals.zip" download class="spiralBut">Download Sprial</a>
+                   <a href="spirals 2.zip" download class="spiralBut">Download Sprial</a>
                    <a href="SpiralPage.html" class="spiralfo">Learn More</a>
                    
                 </div>
