switched single page spiral links

--- a/SpiralPage.html
+++ b/SpiralPage.html
@@ -112,8 +112,8 @@
                     
                     <div class="btnRow"> 
                         <hr class="line1">
-                        <a href="StandardSpiral2025a.pdf" download class="spiralBut2">Download Spiral Part A</a>
-                        <a href="StandardSpiral2025b.pdf" download class="spiralBut2"> Download Spiral Part B</a>
+                        <a href="Spiral2026a.pdf" download class="spiralBut2">Download Spiral Part A</a>
+                        <a href="Spiral2026b.pdf" download class="spiralBut2"> Download Spiral Part B</a>
                         <a href="blankSpis.zip" download class="spiralBut2">Download Blank Spirals</a>
                         <hr class="line1">
                     </div>
