new blank spi link and text change

--- a/SpiralPage.html
+++ b/SpiralPage.html
@@ -43,9 +43,9 @@
         <section class="body1">
             <div class="d1" id="spiBod">
                 <h3 class="s1h3">How to use the Spiral</h3>
-                <p>Each spiral contains activities for one year. You can download our 2025
-                    spiral today! Cut along the heavy spiral line and tape the two spirals (parts A and B)
-                    together (at July 14 and July 21) to form one long 52 week “ribbon.” Each week, tear off the
+                <p>Each spiral contains activities for one year. You can download our spiral today! 
+                    Cut along the heavy spiral line and tape the two spirals (parts A and B)
+                    together to form one long 52 week “ribbon.” Each week, tear off the
                     week you are in and do the activities listed. After 208 weeks we will, hopefully, have a happier
                     and more positive nation!
                 </p>
@@ -114,7 +114,7 @@
                         <hr class="line1">
                         <a href="Spiral2026a.pdf" download class="spiralBut2">Download Spiral Part A</a>
                         <a href="Spiral2026b.pdf" download class="spiralBut2"> Download Spiral Part B</a>
-                        <a href="blankSpis.zip" download class="spiralBut2">Download Blank Spirals</a>
+                        <a href="BlankSpirals2026.pdf" download class="spiralBut2">Download Blank Spirals</a>
                         <hr class="line1">
                     </div>
 
